--- a/Klapp_Angular/src/app/alterar-senha/alterar-senha.component.scss
+++ b/Klapp_Angular/src/app/alterar-senha/alterar-senha.component.scss
@@ -26,3 +26,81 @@ button {
   background-color: transparent;
 
 }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Alinha o conteúdo ao final */
+  align-items: center; /* Centraliza horizontalmente */
+  padding-bottom: 20px; /* Espaço extra na parte inferior */
+}
+
+.btn-primary {
+  height: 35px; /* Maior altura para o botão */
+  width: 70px;
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: solid 2px;
+  cursor: pointer;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  
+  /* Centralização do texto */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form{
+  width: 15vw;
+}
+.form-control {
+  background-color: transparent;
+  color: white;
+}
+
+
+.slider {
+  background-color: #ffffff2b;
+  border-radius: 100px;
+  padding: 1px;
+  margin: 10px;
+  cursor: pointer;
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  align-items: center;
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 20px;
+  box-shadow: rgba(0, 0, 0, 0.62) 0px 0px 5px inset, rgba(0, 0, 0, 0.21) 0px 0px 0px 24px inset,
+        #22cc3f 0px 0px 0px 0px inset, rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
+}
+
+.slider::after {
+  content: "";
+  display: flex;
+  left: 2px;
+  width: 20px;
+  height: 20px;
+  background-color: #e3e3e3;
+  border-radius: 200px;
+  position: absolute;
+  box-shadow: transparent 0px 0px 0px 2px, rgba(0, 0, 0, 0.3) 0px 6px 6px;
+  transition: left 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  will-change: left, background-color;
+}
+
+.switch input[type="checkbox"]:checked + .slider {
+  box-shadow: rgba(0, 0, 0, 0.62) 0px 0px 5px inset, #22cc3f 0px 0px 0px 2px inset, #22cc3f 0px 0px 0px 24px inset,
+        rgba(224, 224, 224, 0.45) 0px 1px 0px 0px;
+}
+
+.switch input[type="checkbox"]:checked + .slider::after {
+  left: 24px;
+}
+
+.switch input[type="checkbox"] {
+  display: none;
+}
