--- a/Klapp_Angular/src/app/principal/principal.component.scss
+++ b/Klapp_Angular/src/app/principal/principal.component.scss
@@ -12,7 +12,7 @@
     background-position: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
 
     display: flex;
