--- a/Klapp_Angular/src/app/profile-container/profile-container.component.html
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.html
@@ -1,11 +1,17 @@
-<div class="container banner-border border border-2" style="border-radius: 8px; min-height: 555px;">
+<div class="container banner-border border border-2" style="border-radius: 8px; height: 80vh;">
     <div class="foto-dados m-2 ms-5">
         <h1>Perfil do aluno</h1>
         <div class="form-image d-flex gap-5">
             <div class="image-container">
-                <img src="/assets/images/Profile-imageG.svg" style="margin-top: 30px;" alt="">
-                <button class="bi bi-plus-circle-fill btn-overlay"></button>
-            </div>
+                <img [src]="imageSrc" alt="Imagem de Perfil" class="profile-image">
+                
+                <!-- Botão para abrir o seletor de arquivos -->
+                <button class="bi bi-plus-circle-fill btn-overlay" (click)="onUploadClick()"></button>
+              
+                <!-- Input file oculto -->
+                <input type="file" #fileInput (change)="onFileSelected($event)" accept="image/*" style="display: none;">
+              </div>
+              
             <div>
                 <form (ngSubmit)="onSubmit()">
                     <label for="nome">Nome</label>
@@ -20,7 +26,7 @@
             </div>
         </div>
 
-        <div class="dados-escolares">
+        <div class="dados-escolares mt-1">
             <h2>Insira suas notas do ensino médio</h2>
             <p>Preencha os campos abaixo com as suas médias anuais para calcular seu desempenho final.</p>
 
@@ -104,8 +110,8 @@
                 </div>
 
                 <!-- Contêiner do botão de envio -->
-                <div class="d-flex justify-content-end w-100 mt-3">
-                    <button type="submit" class="btn btn-primary" style="max-width: 100px;">Salvar</button>
+                <div class="d-flex justify-content-end mt-3">
+                    <button type="submit" class="btn btn-primary">Salvar</button>
                 </div>
             </form>
 
