--- a/Klapp_Angular/src/app/ranking/ranking.component.scss
+++ b/Klapp_Angular/src/app/ranking/ranking.component.scss
@@ -1,11 +1,11 @@
 .banner-border {
+ 
+  height: 80vh;
   padding: 10px;
   background: rgba(255, 255, 255, 0.3);
-  /* Fundo semitransparente */
   backdrop-filter: blur(10px);
-  /* Aplica o desfoque */
   -webkit-backdrop-filter: blur(10px);
-  /* Compatibilidade com navegadores WebKit */
+
 }
 
 .text {
