--- a/Klapp_Angular/src/app/side-menu/side-menu.component.scss
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.scss
@@ -1,13 +1,12 @@
-
 .blurred-background {
-    background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
-    backdrop-filter: blur(10px); /* Aplica o desfoque */
-    -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
+    height: 92vh;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+
 }
 
 .link-icons a {
     color: white !important;
     font-family: "Poppins", sans-serif;
 }
-
-
