--- a/Klapp_Angular/src/app/side-right/side-right.component.html
+++ b/Klapp_Angular/src/app/side-right/side-right.component.html
@@ -1,4 +1,4 @@
-<div class="banner-border border border-2" style="min-height: 553px; min-width: 350px;">
+<div class="banner-border border border-2" style="height: 80vh; width: 350px;">
     <div ngbAccordion>
         <div ngbAccordionItem [collapsed]="false">
             <h2 ngbAccordionHeader>
