--- a/Klapp_Angular/src/app/profile-container/profile-container.component.scss
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.scss
@@ -37,11 +37,13 @@ form {
   width: 100%; 
   display: flex;
   flex-direction: column;
+  border: none;
 }
 
 label {
   margin-right: 10px;
   margin-bottom: 10px;
+  
 }
 
 input[type="text"],
