--- a/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
+++ b/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
@@ -59,6 +59,8 @@
           <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100%;">
             <h1 style="margin-bottom: 40px;" class="text-white">Sua Pontuação!</h1>
             <div class="donut-chart">
+              <app-total-acertos *ngIf="showScoreChart" [score]="score" [totalQuestions]="totalQuestions"></app-total-acertos>
+
               <div class="donut-chart-circle" [ngStyle]="{'background': 'conic-gradient(#4caf50 ' + (score / totalQuestions * 100) + '%, #e0e0e0 0%)'}"></div>
               <div class="d-flex justify-content-center donut-chart-text">{{ score }} / {{ totalQuestions }}</div>
             </div>
@@ -73,4 +75,4 @@
       <app-side-right></app-side-right>
     </div>
   </div>
-</div>
+</div> 
