--- a/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
+++ b/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
@@ -57,12 +57,12 @@
         <!-- Gráfico de pontuação (donut simulado) e botão de redirecionamento -->
         <ng-template #scoreChart>
           <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100%;">
-            <h1 style="margin-bottom: 40px;" class="text-white">Sua Pontuação!</h1>
+            <h2 style="margin-top: 50px;" class="text-white">Sua Pontuação!</h2>
             <div class="donut-chart">
               <app-total-acertos *ngIf="showScoreChart" [score]="score" [totalQuestions]="totalQuestions"></app-total-acertos>
 
               <div class="donut-chart-circle" [ngStyle]="{'background': 'conic-gradient(#4caf50 ' + (score / totalQuestions * 100) + '%, #e0e0e0 0%)'}"></div>
-              <div class="d-flex justify-content-center donut-chart-text">{{ score }} / {{ totalQuestions }}</div>
+              <div class="d-flex justify-content-center donut-chart-text"></div>
             </div>
             <button class="btn btn-primary mt-4" (click)="submitAnswers()">Ir para Tela do Aluno</button>
           </div>
