--- a/Klapp_Angular/src/app/total-acertos/total-acertos.component.html
+++ b/Klapp_Angular/src/app/total-acertos/total-acertos.component.html
@@ -1,3 +1,7 @@
-<div style="align-items: center; width: 100%;">
-  <canvas style="max-width: 450px; max-height: 220px;" id="canvas">{{chart}}</canvas>
+<div class="d-flex justify-content-center mt-1 mb-1" style="align-items: center; width: 100%;">
+  <canvas class="mb-3" style="max-width: 600px; max-height: 400px;" id="canvas">{{chart}}</canvas>
+</div>
+<div class="d-flex justify-content-center align-items-center chart-container">
+  <h1 id="score-percentage"></h1>
+  <canvas id="canvas"></canvas>
 </div>
