--- a/Klapp_Angular/src/app/colocacao/colocacao.component.html
+++ b/Klapp_Angular/src/app/colocacao/colocacao.component.html
@@ -1,5 +1,5 @@
 <div class="container banner-border border border-2 p-0 container-fluid m-0 "
-    style="border-radius: 8px; width: 55vw; height: 78vh; margin: 0; padding: 0;">
+    style="border-radius: 8px; height: 82%;">
     <app-ranking-message></app-ranking-message>
 
 
