--- a/Klapp_Angular/src/app/side-menu/side-menu.component.html
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.html
@@ -13,11 +13,13 @@
         <a routerLink="/student-progress"class="text-decoration-none text-dark mb-4">
             <p class="bi bi-bar-chart mb-4"> Progresso</p>
         </a>
-        <a href="/forum" class="text-decoration-none text-dark mb-4">
+        <a routerLink="/forum" class="text-decoration-none text-dark mb-4">
             <p class="bi bi-people mb-4"> Fórum</p>
         </a>
-        <a href="/ajuda" class="text-decoration-none text-dark mb-4">
+        <!-- BIGEUS: modifiquei a roto acima de href pra routerlink e mudei abaixo pra aparecer o chat de suporte -->
+        <a (click)="toggleChat()" class="text-decoration-none text-dark mb-4" style="cursor: pointer;">
             <p class="bi bi-question-circle mb-4"> Ajuda</p>
-        </a>
+          </a>
     </div>
 </div>
+<app-support-chat></app-support-chat>
