--- a/Klapp_Angular/src/app/student-forum/student-forum.component.html
+++ b/Klapp_Angular/src/app/student-forum/student-forum.component.html
@@ -7,11 +7,12 @@
       <app-banner-top>
       </app-banner-top>
       <!-- <app-ranking></app-ranking> -->
-       <app-progresso></app-progresso>
+      <app-forum></app-forum>
     </div>
     <div class="col-md-2 mt-3">
       <app-logout-image></app-logout-image>
-      <app-side-right></app-side-right>
+      <!-- <app-side-right></app-side-right> -->
+       <app-filtros-disciplinas></app-filtros-disciplinas>
     </div>
   </div>
 </div>
