--- a/Klapp_Angular/src/app/student-quizzes01/student-quizzes01.component.html
+++ b/Klapp_Angular/src/app/student-quizzes01/student-quizzes01.component.html
@@ -1,22 +1,17 @@
-<div class="background-container">
-    <div class="tela-aluno-container d-flex p-4">
-      <!-- Side Menu Alinhado à Esquerda -->
-      <app-side-menu class="side-menu" style="margin-right: 10px;"></app-side-menu>
-    
-      <!-- Banner Top Centralizado -->
-      <div class="banner-top-container flex-grow-1 d-flex flex-column">
-        <div class="d-flex justify-content-between align-items-start">
-          <app-banner-top class="banner-top mb-3"></app-banner-top>
-          <app-logout-image></app-logout-image> <!-- Componente de logout -->
-        </div>
-        <!-- Componente Ranking abaixo do Banner -->
-        <div class="ranking-container">
-            <div class="row text-center" style="height: 78vh;">
-                <app-colocacao></app-colocacao>
-            </div>
-          <app-side-right></app-side-right>
-        </div>
-      </div>
+<div class="background-container container-fluid">
+  <div class="row" style="gap: 10px">
+    <div class="col-md-2 mt-3">
+      <app-side-menu></app-side-menu>
+    </div>
+    <div class="col-md-7 mt-3">
+      <app-banner-top>
+      </app-banner-top>
+      <!-- <app-ranking></app-ranking> -->
+       <app-colocacao></app-colocacao>
+    </div>
+    <div class="col-md-2 mt-3">
+      <app-logout-image></app-logout-image>
+      <app-side-right></app-side-right>
     </div>
   </div>
-  
+</div>
