--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -3,8 +3,7 @@
         <!-- Coluna da Imagem -->
         <div class="col-lg-5 col-md-7 d-none d-md-flex">
             <div class="estudante-container">
-                <img src="/assets/images/estudante1.svg" alt="Imagem de um estudante"
-                    class="img-fluid estudante-imagem">
+                <img src="/assets/images/estudante1.svg" alt="Imagem de um estudante" class="img-fluid estudante-imagem">
             </div>
         </div>
 
@@ -14,15 +13,15 @@
                 <h1 class="text-center mb-4">Olá, vamos começar?</h1>
                 <div class="form-group">
                     <input type="text" id="username" name="username" ngModel required placeholder="Entre com seu e-mail"
-                        class="form-control mb-3">
+                        class="form-control mb-3" [(ngModel)]="username">
                 </div>
                 <div class="form-group">
-                    <input type="password" id="password" name="password" ngModel required placeholder="Senha"
-                        class="form-control mb-3">
+                    <input type="password" id="senha" name="senha" ngModel required placeholder="Senha"
+                        class="form-control mb-3" [(ngModel)]="senha"> <!-- Alterado para SENHA -->
                 </div>
                 <div class="form-group d-flex justify-content-between align-items-center mb-3">
                     <div class="d-flex m-0" style="height: 23px;">
-                        <div class="checkbox-wrapper-46 d-flex align-items-center me-2"> <!-- 'me-2' para margem à direita -->
+                        <div class="checkbox-wrapper-46 d-flex align-items-center me-2">
                             <input type="checkbox" id="cbx-46" class="inp-cbx" />
                             <label for="cbx-46" class="cbx">
                                 <span>
@@ -32,23 +31,25 @@
                                 </span>
                             </label>
                         </div>
-                        <label for="cbx-46" class="check m-0">Manter conectado</label> <!-- 'for' do label deve corresponder ao checkbox -->
+                        <label for="cbx-46" class="check m-0">Manter conectado</label>
                     </div>
                     <button type="button" class="btn btn-link btn-rec-senha p-0 align-self-start">Recuperar senha?</button>
                 </div>
-                <a [routerLink]="'tela-aluno'" class="btn btn-primary w-100 mb-3">Fazer Login</a>
-
+                <button type="submit" class="btn btn-primary w-100 mb-3">Fazer Login</button>
 
                 <div class="container-traco text-center my-4">
                     <span class="text">Ou continue com</span>
                 </div>
                 <div class="redes-sociais d-flex justify-content-center mb-4">
-                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/Google.svg" alt="Google"
-                            class="img-sociais"></button>
-                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/Apple.svg" alt="Apple"
-                            class="img-sociais"></button>
-                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/FACEBOOK.svg" alt="Facebook"
-                            class="img-sociais"></button>
+                    <button class="btn btn-outline-secondary mx-2">
+                        <img src="/assets/images/Google.svg" alt="Google" class="img-sociais">
+                    </button>
+                    <button class="btn btn-outline-secondary mx-2">
+                        <img src="/assets/images/Apple.svg" alt="Apple" class="img-sociais">
+                    </button>
+                    <button class="btn btn-outline-secondary mx-2">
+                        <img src="/assets/images/FACEBOOK.svg" alt="Facebook" class="img-sociais">
+                    </button>
                 </div>
                 <div class="container-cadastrar text-center">
                     <span class="text">Não tem conta?</span>
