ajustes de containers

--- a/Klapp_Angular/src/app/colocacao/colocacao.component.html
+++ b/Klapp_Angular/src/app/colocacao/colocacao.component.html
@@ -1,5 +1,5 @@
 <div class="container banner-border border border-2 p-0 container-fluid m-0 "
-    style="border-radius: 8px; height: 82%;">
+style="border-radius: 8px; height: 80vh;">
     <app-ranking-message></app-ranking-message>
 
 
