--- a/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
+++ b/Klapp_Angular/src/app/tela-quiz/tela-quiz.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-7 mt-3">
       <app-banner-top></app-banner-top>
-      <div class="container banner-border border border-2" style="border-radius: 8px; height: 553px;">
+      <div class="container banner-border border border-2" style="border-radius: 8px; height: 80vh;">
         <div class="d-flex justify-content-center">
           <h3 class="text-white mt-1 mb-2">Construção de Algoritimos</h3>
         </div>
