add cadastro, populateProfile, updateProfile

--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="container-cadastrar text-center">
                     <span class="text">Não tem conta?</span>
-                    <button type="button" class="btn btn-link btn-cadastrar">Crie uma conta agora</button>
+                    <button [routerLink]="'cadastro'" type="button" class="btn btn-link btn-cadastrar">Crie uma conta agora</button>
                 </div>
             </form>
         </div>
