--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <!-- Coluna da Imagem -->
         <div class="col-lg-5 col-md-7 d-none d-md-flex">
             <div class="estudante-container">
-                <img src="/assets/images/estudante1.svg" alt="Imagem de um estudante" class="img-fluid estudante-imagem">
+                <img src="/assets/images/estudante1.svg" alt="Imagem de uma estudante" class="img-fluid estudante-imagem">
             </div>
         </div>
 
