--- a/Klapp_Angular/src/app/forum/forum.component.html
+++ b/Klapp_Angular/src/app/forum/forum.component.html
@@ -1,5 +1,5 @@
 <div class="container banner-border border border-2 p-0 container-fluid m-0"
-    style="border-radius: 8px; margin: 0; padding: 0; height: 555px;">
+    style="border-radius: 8px; margin: 0; padding: 0; height: 80vh;">
     <h4 class="text-light mt-4 ms-4 mb-2 p-0 m-0">Últimas publicações</h4>
 
     <div class="row justify-content-center m-0 justify-content-end p-0" >
