--- a/Klapp_Angular/src/app/profile-container/profile-container.component.html
+++ b/Klapp_Angular/src/app/profile-container/profile-container.component.html
@@ -15,7 +15,7 @@
             <div>
                 <form (ngSubmit)="onSubmit()">
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome" [(ngModel)]="nome" name="nome" class="mb-2" required>
+                    <input type="text" id="nome" [(ngModel)]="nome" name="nome" class="mb-2 p-2" required>
 
                     <label for="email">Email</label>
                     <input type="text" id="email" [(ngModel)]="email" name="email" class="mb-2" required>
