--- a/Klapp_Angular/src/app/progresso/progresso.component.html
+++ b/Klapp_Angular/src/app/progresso/progresso.component.html
@@ -1,5 +1,5 @@
 <div class="container banner-border border border-2 p-0 container-fluid m-0 "
-    style="border-radius: 8px; margin: 0; padding: 0; height: 555px;">
+    style="border-radius: 8px; margin: 0; padding: 0; height: 80vh;">
 
     <h4 class="text-light mt-4 ms-4 mb-3">Acompanhe seu progresso</h4>
 
