--- a/Klapp_Angular/src/app/select-turmas/select-turmas.component.html
+++ b/Klapp_Angular/src/app/select-turmas/select-turmas.component.html
@@ -1,14 +1,14 @@
 <div class="background-container container-fluid">
   <div class="row" style="gap: 10px">
     <div class="col-md-2 mt-3">
-      <app-side-menu></app-side-menu>
+      <app-side-menu-prof></app-side-menu-prof>
     </div>
 
     <div class="col-md-7 mt-3">
       <app-banner-top></app-banner-top>
 
       <!-- Contêiner principal -->
-      <div class="banner-border">
+      <div class="banner-border" style="border-radius: 8px; height: 80vh; width: 77vw;">
         <!-- Título -->
         <h3 class="banner-title">Turmas</h3>
 
