add progresso-turma page

--- a/Klapp_Angular/src/app/progresso-turma/progresso-turma.component.html
+++ b/Klapp_Angular/src/app/progresso-turma/progresso-turma.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-2 mt-3">
             <app-logout-image></app-logout-image>
-            <app-filtros-disciplinas></app-filtros-disciplinas>
+            <app-grafico-media-alunos></app-grafico-media-alunos>
         </div>
     </div>
 </div>
