--- a/Klapp_Angular/src/app/turma-table/turma-table.component.html
+++ b/Klapp_Angular/src/app/turma-table/turma-table.component.html
@@ -1,60 +1,65 @@
-<!-- messages-scroll.component.html -->
-<div class="card border-white banner-border">
-    <h3 class="ms-2 mb-2 text-white">Turma AS405TSN1</h3>
-    <table class="table table-striped banner-border">
-        <thead>
-            <tr class="bg-transparent">
-                <th scope="col">Nome</th>
-                <th scope="col">Ra</th>
-                <th scope="col">Pontos Semana 1</th>
-                <th scope="col">Pontos Semana 2</th>
-                <th scope="col">Pontos Semana 3</th>
-                <th scope="col">Pontos Semana 4</th>
-                <th scope="col">Pontos Semana 5</th>
-                <th scope="col">Pontos Semana 6</th>
-                <th scope="col">Pontos Semana 7</th>
-                <th scope="col">Pontos Semana 8</th>
-            </tr>
-        </thead>
-        <tbody class="bg-transparent">
-            @for (aluno of alunos; track aluno.Nome; let i = $index) {
-            <tr>
-                <td>
-                    {{aluno.Nome}}
-                </td>
-                <td>
-                    {{aluno.RA}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana1}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana2}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana3}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana4}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana5}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana6}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana7}}
-                </td>
-                <td>
-                    {{aluno.PontosSemana8}}
-                </td>
-                <td>
-                    {{aluno.Media}}
-                </td>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card border-white banner-border blurred-background">
+                <div class="col-md-12">
+                    <h3 class="mb-3 text-white m-3">Turma AS405TSN1</h3>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped banner-border mb-5">
+                        <thead class="bg-transparent">
+                            <tr>
+                                <th scope="col">RA</th>
+                                <th scope="col">Semana 1</th>
+                                <th scope="col">Semana 2</th>
+                                <th scope="col">Semana 3</th>
+                                <th scope="col">Semana 4</th>
+                                <th scope="col">Semana 5</th>
+                                <th scope="col">Semana 6</th>
+                                <th scope="col">Semana 7</th>
+                                <th scope="col">Semana 8</th>
+                                <th scope="col">Média</th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-transparent">
+                            @for (aluno of paginatedAlunos; track aluno.Nome; let i = $index) {
+                            <tr>
+                                <td>{{aluno.RA}}</td>
+                                <td>{{aluno.PontosSemana1}}</td>
+                                <td>{{aluno.PontosSemana2}}</td>
+                                <td>{{aluno.PontosSemana3}}</td>
+                                <td>{{aluno.PontosSemana4}}</td>
+                                <td>{{aluno.PontosSemana5}}</td>
+                                <td>{{aluno.PontosSemana6}}</td>
+                                <td>{{aluno.PontosSemana7}}</td>
+                                <td>{{aluno.PontosSemana8}}</td>
+                                <td>{{aluno.Media}}</td>
+                            </tr>
+                            }
+                        </tbody>
+                    </table>
 
-            </tr>
-            }
-        </tbody>
-    </table>
+                    <!-- Pagination -->
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination justify-content-center ">
+                            <li class="page-item" [class.disabled]="currentPage === 1">
+                                <button class="page-link" (click)="changePage(currentPage - 1)">Anterior</button>
+                            </li>
+                            @for (page of [].constructor(totalPages); track $index) {
+                            <li class="page-item" [class.active]="currentPage === $index + 1"
+                                [class.border]="currentPage === $index + 1">
+                                <button class="page-link" (click)="changePage($index + 1)">
+                                    {{$index + 1}}
+                                </button>
+                            </li>
+                            }
+                            <li class="page-item" [class.disabled]="currentPage === totalPages">
+                                <button class="page-link" (click)="changePage(currentPage + 1)">Próximo</button>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
