--- a/Klapp_Angular/src/app/forum-prof/forum-prof.component.html
+++ b/Klapp_Angular/src/app/forum-prof/forum-prof.component.html
@@ -1,13 +1,18 @@
-<div class="container banner-border border border-2 p-0 container-fluid m-0"
-    style="border-radius: 8px; margin: 0; padding: 0; height: 80vh;">
-    <h4 class="text-light mt-4 ms-4 mb-2 p-0 m-0">Últimas publicações</h4>
-
-    <div class="row justify-content-center m-0 justify-content-end p-0" >
-        <!-- <app-student-progress-line-chart style="margin-left: 325px; margin-bottom: 18px;"></app-student-progress-line-chart>
-        <app-student-radar-chart style="margin-left: 325px;"></app-student-radar-chart> -->
-        <app-messages-scroll></app-messages-scroll>
+<div class="background-container container-fluid">
+    <div class="row" style="gap: 10px">
+      <div class="col-md-2 mt-3">
+        <app-side-menu-prof></app-side-menu-prof>
+      </div>
+      <div class="col-md-7 mt-3">
+        <app-banner-top>
+        </app-banner-top>
+        <!-- <app-ranking></app-ranking> -->
+        <app-forum></app-forum>
+      </div>
+      <div class="col-md-2 mt-3">
+        <app-logout-image></app-logout-image>
+        <!-- <app-side-right></app-side-right> -->
+         <app-filtros-disciplinas></app-filtros-disciplinas>
+      </div>
     </div>
-        <app-make-publication></app-make-publication>
-
-
-</div>
+  </div>
