--- a/Klapp_Angular/src/app/forum-prof/forum-prof.component.scss
+++ b/Klapp_Angular/src/app/forum-prof/forum-prof.component.scss
@@ -1,9 +1,13 @@
-.banner-border {
-    
-    background: rgba(255, 255, 255, 0.3);
-    /* Fundo semitransparente */
-    backdrop-filter: blur(10px);
-    /* Aplica o desfoque */
-    -webkit-backdrop-filter: blur(10px);
-    /* Compatibilidade com navegadores WebKit */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.background-container {
+    background-image: url('/assets/images/Background.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
 }
