--- a/Klapp_Angular/src/app/profile-container-prof/profile-container-prof.component.html
+++ b/Klapp_Angular/src/app/profile-container-prof/profile-container-prof.component.html
@@ -3,7 +3,7 @@
         <h1>Perfil do professor</h1>
         <div class="form-image d-flex gap-5">
             <div class="image-container">
-                <img [src]="imageSrc" alt="Imagem de Perfil" class="profile-image">
+                <img src="/assets/images/Profile-image.svg" alt="Imagem de perfil">
 
                 <!-- Botão para abrir o seletor de arquivos -->
                 <button class="bi bi-plus-circle-fill btn-overlay" (click)="onUploadClick()"></button>
