--- a/Klapp_Angular/src/app/quiz-prof/quiz-prof.component.html
+++ b/Klapp_Angular/src/app/quiz-prof/quiz-prof.component.html
@@ -1,1 +1,17 @@
-<p>quiz-prof works!</p>
+<div class="background-container container-fluid">
+    <div class="row" style="gap: 10px">
+      <div class="col-md-2 mt-3">
+        <app-side-menu-prof></app-side-menu-prof>
+      </div>
+      <div class="col-md-7 mt-3">
+        <app-banner-top>
+        </app-banner-top>
+        <!-- <app-ranking></app-ranking> -->
+         <app-teacher-quizzes></app-teacher-quizzes>
+      </div>
+      <div class="col-md-2 mt-3" >
+        <app-logout-image ></app-logout-image>
+        <app-side-right-quiz></app-side-right-quiz>
+      </div>
+    </div>
+  </div>
