add dynamic login

--- a/Klapp_Angular/src/app/select-turmas/select-turmas.component.html
+++ b/Klapp_Angular/src/app/select-turmas/select-turmas.component.html
@@ -15,7 +15,7 @@
         <!-- Blocos de turmas -->
         <div class="turmas-container">
           <!-- Bloco 1 -->
-          <a href="#" target="_blank" class="no-underline">
+          <a routerLink="../progresso-turma" class="no-underline">
             <button class="turma-card">
               <p class="turma-title">
                 <img src="assets/images/Users-icon.svg" alt="" class="turma-icon1">
@@ -29,7 +29,7 @@
           </a>
 
           <!-- Bloco 2 -->
-          <a href="#" target="_blank" class="no-underline">
+          <a  target="_blank" class="no-underline">
             <button class="turma-card">
               <p class="turma-title">
                 <img src="assets/images/Users-icon.svg" alt="" class="turma-icon1">
@@ -43,7 +43,7 @@
           </a>
 
           <!-- Bloco 3 -->
-          <a href="#" target="_blank" class="no-underline">
+          <a target="_blank" class="no-underline">
             <button class="turma-card">
               <p class="turma-title">
                 <img src="assets/images/Users-icon.svg" alt="" class="turma-icon1">
