--- a/Klapp_Angular/src/app/progresso-turma/progresso-turma.component.html
+++ b/Klapp_Angular/src/app/progresso-turma/progresso-turma.component.html
@@ -1,7 +1,7 @@
 <div class="background-container container-fluid">
     <div class="row" style="gap: 10px">
         <div class="col-md-2 mt-3">
-            <app-side-menu></app-side-menu>
+            <app-side-menu-prof></app-side-menu-prof>
         </div>
         <div class="col-md-7 mt-3">
             <app-banner-top></app-banner-top>
